interfaces/C++/TACDev/TACDev.h

typedef unsigned long TAC_HANDLE;
typedef unsigned long TAC_RESULT;
	TACDEV_EXPORT TAC_RESULT Usb0(TAC_HANDLE tacHandle, bool state);
	TACDEV_EXPORT TAC_RESULT GetUsb0State(TAC_HANDLE tacHandle, bool* state);
	TACDEV_EXPORT TAC_RESULT Usb1(TAC_HANDLE tacHandle, bool state);
	TACDEV_EXPORT TAC_RESULT GetUsb1State(TAC_HANDLE tacHandle, bool* state);
	TACDEV_EXPORT TAC_RESULT PowerKey(TAC_HANDLE tacHandle, bool state);
	TACDEV_EXPORT TAC_RESULT GetPowerKeyState(TAC_HANDLE tacHandle, bool* state);
	TACDEV_EXPORT TAC_RESULT VolumeUp(TAC_HANDLE tacHandle, bool state);
	TACDEV_EXPORT TAC_RESULT GetVolumeUpState(TAC_HANDLE tacHandle, bool* state);
	TACDEV_EXPORT TAC_RESULT VolumeDown(TAC_HANDLE tacHandle, bool state);
	TACDEV_EXPORT TAC_RESULT GetVolumeDownState(TAC_HANDLE tacHandle, bool* state);
	TACDEV_EXPORT TAC_RESULT DisconnectUIM1(TAC_HANDLE tacHandle, bool state);
	TACDEV_EXPORT TAC_RESULT GetDisconnectUIM1State(TAC_HANDLE tacHandle, bool* state);
	TACDEV_EXPORT TAC_RESULT DisconnectUIM2(TAC_HANDLE tacHandle, bool state);
	TACDEV_EXPORT TAC_RESULT GetDisconnectUIM2State(TAC_HANDLE tacHandle, bool* state);
	TACDEV_EXPORT TAC_RESULT DisconnectSDCard(TAC_HANDLE tacHandle, bool state);
	TACDEV_EXPORT TAC_RESULT GetDisconnectSDCardState(TAC_HANDLE tacHandle, bool* state);
	TACDEV_EXPORT TAC_RESULT PrimaryEDL(TAC_HANDLE tacHandle, bool state);
	TACDEV_EXPORT TAC_RESULT GetPrimaryEDLState(TAC_HANDLE tacHandle, bool* state);
	TACDEV_EXPORT TAC_RESULT SecondaryEDL(TAC_HANDLE tacHandle, bool state);
	TACDEV_EXPORT TAC_RESULT GetSecondaryEDLState(TAC_HANDLE tacHandle, bool* state);
	TACDEV_EXPORT TAC_RESULT ForcePSHoldHigh(TAC_HANDLE tacHandle, bool state);
	TACDEV_EXPORT TAC_RESULT GetForcePSHoldHighState(TAC_HANDLE tacHandle, bool* state);
	TACDEV_EXPORT TAC_RESULT SecondaryPmResinN(TAC_HANDLE tacHandle, bool state);
	TACDEV_EXPORT TAC_RESULT GetSecondaryPmResinNState(TAC_HANDLE tacHandle, bool* state);
	TACDEV_EXPORT TAC_RESULT Eud(TAC_HANDLE tacHandle, bool state);
	TACDEV_EXPORT TAC_RESULT GetEUDState(TAC_HANDLE tacHandle, bool* state);
	TACDEV_EXPORT TAC_RESULT HeadsetDisconnect(TAC_HANDLE tacHandle, bool state);
	TACDEV_EXPORT TAC_RESULT GetHeadsetDisconnectState(TAC_HANDLE tacHandle, bool* state);
	TACDEV_EXPORT TAC_RESULT SetName(TAC_HANDLE tacHandle, const char* newName);
	TACDEV_EXPORT TAC_RESULT GetResetCount(TAC_HANDLE tacHandle, int* resetCount);
	TACDEV_EXPORT TAC_RESULT ClearResetCount(TAC_HANDLE tacHandle);
	TACDEV_EXPORT TAC_RESULT PowerOnButton(TAC_HANDLE tacHandle);
	TACDEV_EXPORT TAC_RESULT PowerOffButton(TAC_HANDLE tacHandle);
	TACDEV_EXPORT TAC_RESULT BootToFastBootButton(TAC_HANDLE tacHandle);
	TACDEV_EXPORT TAC_RESULT BootToUEFIMenuButton(TAC_HANDLE tacHandle);
	TACDEV_EXPORT TAC_RESULT BootToEDLButton(TAC_HANDLE tacHandle);
	TACDEV_EXPORT TAC_RESULT BootToSecondaryEDLButton(TAC_HANDLE tacHandle);