interfaces/C#/TACDevInterop/TACDev.cs


		[DllImport("TACDev.dll")]
		private static extern uint Usb0(uint tacHandle, bool state);

		public void Usb0(bool state)
		{
			if (TestHandle())
				testResult(Usb0(_tacHandle, state));
		}

		[DllImport("TACDev.dll")]
		private static extern uint GetUsb0State(uint tacHandle, ref bool state);

		public bool GetUsb0State()
		{
			bool state = false;

			if (TestHandle())
				testResult(GetUsb0State(_tacHandle, ref state));

			return state;
		}

		public bool usb1
		{
			get { return GetUsb1State(); }
			set { Usb1(value); }
		}

		[DllImport("TACDev.dll")]
		private static extern uint Usb1(uint tacHandle, bool state);

		public void Usb1(bool state)
		{
			if (TestHandle())
				testResult(Usb1(_tacHandle, state));
		}

		[DllImport("TACDev.dll")]
		private static extern uint GetUsb1State(uint tacHandle, ref bool state);

		public bool GetUsb1State()
		{
			bool state = false;

			if (TestHandle())
				testResult(GetUsb1State(_tacHandle, ref state));

			return state;
		}

		public bool powerKey
		{
			get { return GetPowerKeyState(); }
			set { PowerKey(value); }
		}

		[DllImport("TACDev.dll")]
		private static extern uint PowerKey(uint tacHandle, bool state);

		public void PowerKey(bool state)
		{
			if (TestHandle())
				testResult(PowerKey(_tacHandle, state));
		}

		[DllImport("TACDev.dll")]
		private static extern uint GetPowerKeyState(uint tacHandle, ref bool state);

		public bool GetPowerKeyState()
		{
			bool state = false;

			if (TestHandle())
				testResult(GetPowerKeyState(_tacHandle, ref state));

			return state;
		}

		public bool volumeUp
		{
			get { return GetVolumeUpState(); }
			set { VolumeUp(value); }
		}

		[DllImport("TACDev.dll")]
		private static extern uint VolumeUp(uint tacHandle, bool state);

		public void VolumeUp(bool state)
		{
			if (TestHandle())
				testResult(VolumeUp(_tacHandle, state));
		}

		[DllImport("TACDev.dll")]
		private static extern uint GetVolumeUpState(uint tacHandle, ref bool state);

		public bool GetVolumeUpState()
		{
			bool state = false;

			if (TestHandle())
				testResult(GetVolumeUpState(_tacHandle, ref state));

			return state;
		}

		public bool volumeDown
		{
			get { return GetVolumeDownState(); }
			set { VolumeDown(value); }
		}

		[DllImport("TACDev.dll")]
		private static extern uint VolumeDown(uint tacHandle, bool state);

		public void VolumeDown(bool state)
		{
			if (TestHandle())
				testResult(VolumeDown(_tacHandle, state));
		}

		[DllImport("TACDev.dll")]
		private static extern uint GetVolumeDownState(uint tacHandle, ref bool state);

		public bool GetVolumeDownState()
		{
			bool state = false;

			if (TestHandle())
				testResult(GetVolumeDownState(_tacHandle, ref state));

			return state;
		}

		public bool uim1Disconnect
		{
			get { return GetDisconnectUIM1State(); }
			set { DisconnectUIM1(value); }
		}

		[DllImport("TACDev.dll")]
		private static extern uint DisconnectUIM1(uint tacHandle, bool state);

		public void DisconnectUIM1(bool state)
		{
			if (TestHandle())
				testResult(DisconnectUIM1(_tacHandle, state));
		}

		[DllImport("TACDev.dll")]
		private static extern uint GetDisconnectUIM1State(uint tacHandle, ref bool state);

		public bool GetDisconnectUIM1State()
		{
			bool state = false;

			if (TestHandle())
				testResult(GetDisconnectUIM1State(_tacHandle, ref state));

			return state;
		}

		public bool uim2Disconnect
		{
			get { return GetDisconnectUIM2State(); }
			set { DisconnectUIM2(value); }
		}

		[DllImport("TACDev.dll")]
		private static extern uint DisconnectUIM2(uint tacHandle, bool state);

		public void DisconnectUIM2(bool state)
		{
			if (TestHandle())
				testResult(DisconnectUIM2(_tacHandle, state));
		}

		[DllImport("TACDev.dll")]
		private static extern uint GetDisconnectUIM2State(uint tacHandle, ref bool state);

		public bool GetDisconnectUIM2State()
		{
			bool state = false;

			if (TestHandle())
				testResult(GetDisconnectUIM2State(_tacHandle, ref state));

			return state;
		}

		public bool disconnectSDCard
		{
			get { return GetDisconnectSDCardState(); }
			set { DisconnectSDCard(value); }
		}

		[DllImport("TACDev.dll")]
		private static extern uint DisconnectSDCard(uint tacHandle, bool state);

		public void DisconnectSDCard(bool state)
		{
			if (TestHandle())
				testResult(DisconnectSDCard(_tacHandle, state));
		}

		[DllImport("TACDev.dll")]
		private static extern uint GetDisconnectSDCardState(uint tacHandle, ref bool state);

		public bool GetDisconnectSDCardState()
		{
			bool state = false;

			if (TestHandle())
				testResult(GetDisconnectSDCardState(_tacHandle, ref state));

			return state;
		}

		public bool primaryEDL
		{
			get { return GetPrimaryEDLState(); }
			set { PrimaryEDL(value); }
		}

		[DllImport("TACDev.dll")]
		private static extern uint PrimaryEDL(uint tacHandle, bool state);

		public void PrimaryEDL(bool state)
		{
			if (TestHandle())
				testResult(PrimaryEDL(_tacHandle, state));
		}

		[DllImport("TACDev.dll")]
		private static extern uint GetPrimaryEDLState(uint tacHandle, ref bool state);

		public bool GetPrimaryEDLState()
		{
			bool state = false;

			if (TestHandle())
				testResult(GetPrimaryEDLState(_tacHandle, ref state));

			return state;
		}

		public bool secondaryEDL
		{
			get { return GetSecondaryEDLState(); }
			set { SecondaryEDL(value); }
		}

		[DllImport("TACDev.dll")]
		private static extern uint SecondaryEDL(uint tacHandle, bool state);

		public void SecondaryEDL(bool state)
		{
			if (TestHandle())
				testResult(SecondaryEDL(_tacHandle, state));
		}

		[DllImport("TACDev.dll")]
		private static extern uint GetSecondaryEDLState(uint tacHandle, ref bool state);

		public bool GetSecondaryEDLState()
		{
			bool state = false;

			if (TestHandle())
				testResult(GetSecondaryEDLState(_tacHandle, ref state));

			return state;
		}

		public bool forcePSHoldHigh
		{
			get { return GetForcePSHoldHighState(); }
			set { ForcePSHoldHigh(value); }
		}

		[DllImport("TACDev.dll")]
		private static extern uint ForcePSHoldHigh(uint tacHandle, bool state);

		public void ForcePSHoldHigh(bool state)
		{
			if (TestHandle())
				testResult(ForcePSHoldHigh(_tacHandle, state));
		}

		[DllImport("TACDev.dll")]
		private static extern uint GetForcePSHoldHighState(uint tacHandle, ref bool state);

		public bool GetForcePSHoldHighState()
		{
			bool state = false;

			if (TestHandle())
				testResult(GetForcePSHoldHighState(_tacHandle, ref state));

			return state;
		}

		public bool secondaryPmResinN
		{
			get { return GetSecondaryPmResinNState(); }
			set { SecondaryPmResinN(value); }
		}

		[DllImport("TACDev.dll")]
		private static extern uint SecondaryPmResinN(uint tacHandle, bool state);

		public void SecondaryPmResinN(bool state)
		{
			if (TestHandle())
				testResult(SecondaryPmResinN(_tacHandle, state));
		}

		[DllImport("TACDev.dll")]
		private static extern uint GetSecondaryPmResinNState(uint tacHandle, ref bool state);

		public bool GetSecondaryPmResinNState()
		{
			bool state = false;

			if (TestHandle())
				testResult(GetSecondaryPmResinNState(_tacHandle, ref state));

			return state;
		}

		public bool eud
		{
			get { return GetEUDState(); }
			set { Eud(value); }
		}

		[DllImport("TACDev.dll")]
		private static extern uint Eud(uint tacHandle, bool state);

		public void Eud(bool state)
		{
			if (TestHandle())
				testResult(Eud(_tacHandle, state));
		}

		[DllImport("TACDev.dll")]
		private static extern uint GetEUDState(uint tacHandle, ref bool state);

		public bool GetEUDState()
		{
			bool result = false;

			if (TestHandle())
				testResult(GetEUDState(_tacHandle, ref result));

			return result;
		}

		public bool headsetDisconnect
		{
			get { return GetHeadsetDisconnectState(); }
			set { HeadsetDisconnect(value); }
		}

		[DllImport("TACDev.dll")]
		private static extern uint HeadsetDisconnect(uint tacHandle, bool state);

		public void HeadsetDisconnect(bool state)
		{
			if (TestHandle())
				testResult(HeadsetDisconnect(_tacHandle, state));
		}

		[DllImport("TACDev.dll")]
		private static extern uint GetHeadsetDisconnectState(uint tacHandle, ref bool state);

		public bool GetHeadsetDisconnectState()
		{
			bool result = false;

			if (TestHandle())
				testResult(GetHeadsetDisconnectState(_tacHandle, ref result));

			return result;
		}

		[DllImport("TACDev.dll")]
		private static extern uint SetName(uint tacHandle, string newName);

		public void SetName(string newName)
		{
			if (TestHandle())
				testResult(SetName(_tacHandle, newName));
		}

		public uint resetCount
		{
			get { return GetResetCount(); }
		}

		[DllImport("TACDev.dll")]
		private static extern uint GetResetCount(uint tacHandle, ref uint resetCount);

		public uint GetResetCount()
		{
			uint result = 0;

			if (TestHandle())
				testResult(GetResetCount(_tacHandle, ref result));

			return result;
		}

		[DllImport("TACDev.dll")]
		private static extern uint ClearResetCount(uint tacHandle);

		public void ClearResetCount()
		{
			if (TestHandle())
				testResult(ClearResetCount(_tacHandle));
		}

		[DllImport("TACDev.dll")]
		private static extern uint PowerOnButton(uint tacHandle);

		public void PowerOnButton()
		{
			if (TestHandle())
				testResult(PowerOnButton(_tacHandle));
		}

		[DllImport("TACDev.dll")]
		private static extern uint PowerOffButton(uint tacHandle);

		public void PowerOffButton()
		{
			if (TestHandle())
				testResult(PowerOffButton(_tacHandle));
		}

		[DllImport("TACDev.dll")]
		private static extern uint BootToFastBootButton(uint tacHandle);

		public void BootToFastBootButton()
		{
			if (TestHandle())
				testResult(BootToFastBootButton(_tacHandle));
		}

		[DllImport("TACDev.dll")]
		private static extern uint BootToUEFIMenuButton(uint tacHandle);

		public void BootToUEFIMenuButton()
		{
			if (TestHandle())
				testResult(BootToUEFIMenuButton(_tacHandle));
		}

		[DllImport("TACDev.dll")]
		private static extern uint BootToEDLButton(uint tacHandle);

		public void BootToEDLButton()
		{
			if (TestHandle())
				testResult(BootToEDLButton(_tacHandle));
		}

		[DllImport("TACDev.dll")]
		private static extern uint BootToSecondaryEDLButton(uint tacHandle);

		public void BootToSecondaryEDLButton()
		{
			if (TestHandle())
				testResult(BootToSecondaryEDLButton(_tacHandle));
		}

		// Some Handy Constants
		private const uint kBufferSize = 1024;
		private const uint BAD_TAC_HANDLE = 0;

		private const uint NO_TAC_ERROR = 0;
		private const uint TAC_BUFFER_TOO_SMALL = 1;
		private const uint TAC_BAD_TAC_HANDLE = 2;
		private const uint TAC_CMD_NOT_FOUND = 3;
		private const uint TAC_BAD_INDEX = 4; 
		private const uint TACDEV_INIT_FAILED = 5;

		// Instance variables
		private uint _tacHandle = 0;
		private string _portName;
		private string _description;
		private string _serialNumber;

		static private void testResult(uint tacResult)
		{
			switch (tacResult)
			{
				case NO_TAC_ERROR:
					break;

				case TAC_BAD_TAC_HANDLE:
					throw new TACException("Bad TAC Handle");

				case TAC_BUFFER_TOO_SMALL:
					throw new TACException("TAC Buffer Too Small");

				case TAC_CMD_NOT_FOUND:
					throw new TACException("TAC Command Not Found");

				case TAC_BAD_INDEX:
					throw new TACException("TAC Bad Index");

				case TACDEV_INIT_FAILED:
					throw new TACException("TACInit Failed");

				default:
					throw new TACException("TAC Error: " + tacResult);
			}
		}

		private bool TestHandle()
		{
			bool result = false;

			if (_tacHandle != BAD_TAC_HANDLE)
			{
				result = true;
			}
			else
			{
				throw new TACException("Handle is bad.  Is the TAC Device is closed?");
			}

			return result;
		}
	}
}
